<resources>
    <string name="app_name">Student Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="about">Created by Tibi</string>
    <string name="title_student_list">Students</string>
    <string name="title_student_detail">Student Details</string>
    <string name="title_settings">Settings</string>
    <string name="create_new_group">Create new</string>
    <string name="grant">Grant</string>
    <string name="permission_explanation">This app needs permission to access your Contacts and
        Calendar to perform it\'s core functionality: managing your students and lessons.</string>
    <string name="student_name">Student name</string>
    <string name="contact_name">Contact name:</string>
    <string name="legal_name">Legal name:</string>
    <string name="identification">Identification</string>
    <string name="scheduled_lessons">Scheduled lessons</string>
    <string name="authority_id">Authority ID</string>
    <string name="student_activated">Student activated</string>
    <string name="inactivate">inactivate</string>
    <string name="activate">Activate</string>
    <string name="save">Save</string>
    <string name="default_calendar">Default calendar</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="confirm_delete_event">Are you sure you want to delete this event?</string>
    <string name="confirm_delete">Comfirm delete</string>
    <string name="event_action">Event action</string>
    <string name="select_action_event">You have selected the following event:</string>
    <string name="create_event_action">Create event</string>
    <string name="create_event_text">What event type do you want to create?</string>
    <string name="student_details">Student details</string>
    <string name="lesson_details">Lesson details</string>
    <string name="event_start">Event starts:</string>
    <string name="event_end">Event ends:</string>
    <string name="lesson_count">Number of lessons:</string>
</resources>
