<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentDetailFragment">

    <android.support.constraint.Guideline
        android:id="@+id/guide_horizontal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:id="@+id/guide_horizontal_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <!-- STUDENT NAME -->

    <TextView
        android:id="@+id/label_name"
        style="@style/AppTheme.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_name"/>

    <TextView
        android:id="@+id/label_display_name"
        style="@style/AppTheme.BodyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        app:layout_constraintLeft_toLeftOf="@id/label_name"
        app:layout_constraintTop_toBottomOf="@id/label_name"/>

        <TextView
            android:id="@+id/display_name"
            style="@style/AppTheme.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/label_display_name"
            app:layout_constraintLeft_toRightOf="@id/guide_horizontal_center"
            tools:text="John Doe"/>

    <TextView
        android:id="@+id/label_legal_name"
        style="@style/AppTheme.BodyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/legal_name"
        android:text="@string/legal_name"
        app:layout_constraintLeft_toLeftOf="@id/label_name"
        app:layout_constraintTop_toBottomOf="@id/label_display_name"/>

        <EditText
            android:id="@+id/legal_name"
            style="@style/AppTheme.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            app:layout_constraintBaseline_toBaselineOf="@id/label_legal_name"
            app:layout_constraintLeft_toRightOf="@id/guide_horizontal_center"
            app:layout_constraintRight_toLeftOf="@id/guide_horizontal_end"
            tools:text="John Oliver Doe Jr."/>

    <View
        android:id="@+id/student_name_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/AppTheme.Separator"
        app:layout_constraintTop_toBottomOf="@id/label_legal_name"
        android:background="@android:color/darker_gray"
        android:visibility="invisible"/>

    <!-- IDENTIFICATION -->

    <TextView
        android:id="@+id/label_id"
        style="@style/AppTheme.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identification"
        app:layout_constraintLeft_toLeftOf="@id/label_name"
        app:layout_constraintTop_toBottomOf="@id/student_name_separator"/>

    <TextView
        android:id="@+id/label_student_activated"
        style="@style/AppTheme.BodyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_activated"
        android:labelFor="@+id/student_activated"
        app:layout_constraintLeft_toLeftOf="@id/label_name"
        app:layout_constraintTop_toBottomOf="@id/label_id" />

        <Switch
            android:id="@+id/student_activated"
            style="@style/AppTheme.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintLeft_toRightOf="@id/guide_horizontal_center"
            app:layout_constraintBaseline_toBaselineOf="@id/label_student_activated" />

    <TextView
        android:id="@+id/label_auth_id"
        style="@style/AppTheme.BodyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/auth_id"
        android:text="@string/authority_id"
        app:layout_constraintLeft_toLeftOf="@id/label_name"
        app:layout_constraintTop_toBottomOf="@id/student_activated"/>

        <EditText
            android:id="@+id/auth_id"
            style="@style/AppTheme.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            app:layout_constraintBaseline_toBaselineOf="@id/label_auth_id"
            app:layout_constraintLeft_toRightOf="@id/guide_horizontal_center"
            app:layout_constraintRight_toLeftOf="@id/guide_horizontal_end"
            tools:text="1234"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/label_auth_id"
        app:layout_constraintRight_toLeftOf="@id/guide_horizontal_end"
        style="@style/Widget.AppCompat.Button.Borderless.Colored" />

    <View
        android:id="@+id/identification_name_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/save_button"
        style="@style/AppTheme.Separator"
        android:background="@android:color/darker_gray"/>

    <!-- LESSONS -->

    <TextView
        android:id="@+id/label_lessons"
        style="@style/AppTheme.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduled_lessons"
        app:layout_constraintLeft_toLeftOf="@id/label_name"
        app:layout_constraintTop_toBottomOf="@id/identification_name_separator"/>

    <!-- DUMP -->

    <TextView
        android:id="@+id/label_dump"
        style="@style/AppTheme.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data dump for logging"
        app:layout_constraintLeft_toLeftOf="@id/label_name"
        app:layout_constraintTop_toBottomOf="@id/label_lessons"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/student_detail"
        style="@style/AppTheme.BodyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        app:layout_constraintTop_toBottomOf="@id/label_dump"
        />
</android.support.constraint.ConstraintLayout>
