<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EventActivity"
    tools:showIn="@layout/activity_event">

    <android.support.constraint.Guideline
        android:id="@+id/guide_horizontal_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:id="@+id/guide_horizontal_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_end="16dp"
        android:orientation="vertical"/>

    <!-- STUDENT DETAILS -->

    <TextView
        android:id="@+id/label_student"
        style="@style/AppTheme.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_details"/>

    <TextView
        android:id="@+id/label_display_name"
        style="@style/AppTheme.BodyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_name"
        app:layout_constraintLeft_toLeftOf="@id/label_student"
        app:layout_constraintTop_toBottomOf="@id/label_student"/>

        <TextView
            android:id="@+id/display_name"
            style="@style/AppTheme.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/label_display_name"
            app:layout_constraintLeft_toRightOf="@id/guide_horizontal_center"
            tools:text="John Doe"/>

    <View
        android:id="@+id/student_details_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/AppTheme.Separator"
        app:layout_constraintTop_toBottomOf="@id/label_display_name"
        android:background="@android:color/darker_gray"
        android:visibility="invisible"/>

    <!-- EVENT DETAILS -->

    <TextView
        android:id="@+id/label_event"
        style="@style/AppTheme.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_details"
        app:layout_constraintTop_toBottomOf="@id/student_details_separator"/>

    <TextView
        android:id="@+id/label_start_time"
        style="@style/AppTheme.BodyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_start"
        app:layout_constraintLeft_toLeftOf="@id/label_student"
        app:layout_constraintTop_toBottomOf="@id/label_event"/>

        <TextView
            android:id="@+id/start_date"
            style="@style/AppTheme.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/label_start_time"
            app:layout_constraintLeft_toRightOf="@id/guide_horizontal_center"
            tools:text="2000-01-01"/>

        <TextView
            android:id="@+id/start_time"
            style="@style/AppTheme.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/label_start_time"
            app:layout_constraintLeft_toRightOf="@id/start_date"
            tools:text="00:00"/>

    <TextView
        android:id="@+id/label_end_time"
        style="@style/AppTheme.BodyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_end"
        app:layout_constraintLeft_toLeftOf="@id/label_student"
        app:layout_constraintTop_toBottomOf="@id/label_start_time"/>

        <TextView
            android:id="@+id/end_date"
            style="@style/AppTheme.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/label_end_time"
            app:layout_constraintLeft_toRightOf="@id/guide_horizontal_center"
            tools:text="2000-01-01"/>

        <TextView
            android:id="@+id/end_time"
            style="@style/AppTheme.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/label_end_time"
            app:layout_constraintLeft_toRightOf="@id/end_date"
            tools:text="00:00"/>

    <TextView
        android:id="@+id/label_lesson_count"
        style="@style/AppTheme.BodyEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_count"
        app:layout_constraintLeft_toLeftOf="@id/label_student"
        app:layout_constraintTop_toBottomOf="@id/label_end_time"/>

        <TextView
            android:id="@+id/lesson_count"
            style="@style/AppTheme.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/label_lesson_count"
            app:layout_constraintLeft_toRightOf="@id/guide_horizontal_center"
            tools:text="2000-01-01"/>

</android.support.constraint.ConstraintLayout>